<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal|top"
        android:padding="42dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/page_header_text_color"
            android:textAppearance="@style/sign_in"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/sign_in_login_backgrounds"
            android:inputType="text"
            android:hint="@string/first_name"
            android:gravity="center"
            android:textAppearance="@style/sign_log_in_text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/sign_in_login_backgrounds"
            android:inputType="text"
            android:hint="@string/last_name"
            android:gravity="center"
            android:textAppearance="@style/sign_log_in_text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/sign_in_login_backgrounds"
            android:inputType="text"
            android:hint="@string/email"
            android:gravity="center"
            android:textAppearance="@style/sign_log_in_text"
            />
        
        <Button
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="35dp"
            android:text="@string/sign_in"
            android:background="@drawable/sign_login_in_button"
            android:textAppearance="@style/sign_login_in_button_text"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account"
                android:textSize="10sp"
                android:letterSpacing="-0.03"
                android:textColor="@color/have_account_color"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="10sp"
                android:layout_marginStart="5dp"
                android:letterSpacing="-0.03"
                android:textColor="@color/login_text_color"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="76dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/sign_in_google"
                    android:letterSpacing="-0.03"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/apple_icon"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:text="@string/sign_in_apple"
                    android:letterSpacing="-0.03"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>